attempt to fix altmetric vertical alignment in Safari = fail

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -34,7 +34,7 @@ a { color: #990000; }
 
 /* Formatting for publications */
 div.citation { margin: 1rem 0 1rem 6.5rem; }
-.citation ul { display: block; list-style-type: none; margin: 0; padding: 0; line-height: 1.3em; }
+.citation ul { display: block; list-style-type: none; margin: 0; padding: 0; line-height: 2rem; }
 .citation li { display: inline-block; }
 .citation .authors li:after { content: ", "; }
 .citation .authors li:last-child:after { content: "."; }
@@ -43,16 +43,16 @@ div.citation { margin: 1rem 0 1rem 6.5rem; }
 .citation .abstract .content { display: none; line-height: 1.3em; }
 
 /* Formatting for media articles */
-.articles ul.article { list-style-type: none; padding: 0; padding-bottom: 1rem;}
-.articles ul.article > li { display: inline-block; }
-.articles ul.article ul.showhide { list-style-type: none; padding: 0;}
-.articles ul.article li.title, li.children { display: block; }
+.articles ul.article { list-style-type: none; padding: 0; padding-bottom: 1rem; line-height: 2rem;}
+.articles ul.article li          { display: inline-block; }
+.articles ul.article li.title    { display: block; }
 .articles ul.article li.children { display: block; }
+.articles ul.article li.content  { display: none; }
+
+.articles ul.article ul.showhide { list-style-type: none; padding-left: 0;}
 .articles ul.article ul.children { list-style-type: circle; }
-.articles ul.article li.content { display: none; }
 
 .articles ul.children ul.article { padding-left: 0; padding-bottom: 0.5rem; }
-.articles ul.children ul.article li:last-child { padding-bottom: 0; }
 .articles ul.children li.title { font-size: 15px; }
 
 .articles ul.article ul.authors li:first-child:before { content: "by "; }
@@ -60,7 +60,6 @@ div.citation { margin: 1rem 0 1rem 6.5rem; }
 
 .articles ul.journals { padding-left: 0; }
 .articles ul.journals li { display: inline-block; }
-.articles ul.journals li:first-child:before { }
 .articles ul.journals li:before { content: "["; }
 .articles ul.journals li:after { content: "]"; }
 
